# cmake-object-library

./: CMakeLists.txt  README.md  a.cc  b.cc  lib1.cc  lib1.h  lib2.cc  lib2.h
